base/guestbook-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-simple
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: guestbook-simple
  template:
    metadata:
      labels:
        app: guestbook-simple
    spec:
      containers:
      - image: ghcr.io/roelvandegrint/guestbook:latest
        name: guestbook-simple
        ports:
        - name: http
          containerPort: 3000
