base/guestbook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:  
  name: guestbook  
spec:
  ingressClassName: nginx
  rules:
    - host: guestbook-dev.dev.vpp.eneco.com
      http:
        paths:
          - backend:
              service:
                name: guestbook-simple
                port:
                  name: http
            path: /
            pathType: Prefix
